--- a/src/app/leadership/new-executive-committee/new-executive-committee.page.html
+++ b/src/app/leadership/new-executive-committee/new-executive-committee.page.html
@@ -22,7 +22,7 @@
                     <ion-text>Shanker Salavath</ion-text>
                   </ion-card-subtitle>
                   <ion-card-title>
-                    <ion-text>sdfgfghj</ion-text>
+                    <ion-text>President</ion-text>
                   </ion-card-title>
                 </ion-card-content>
               </ion-card>  
