--- a/src/app/leadership/executive-committee/executive-committee.page.html
+++ b/src/app/leadership/executive-committee/executive-committee.page.html
@@ -7,7 +7,7 @@
         <ion-card-header>
           <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
             <div fxFlex="97" class="layout-flex-col">
-              <ion-text color="primary" class="card-heading">Executives Committee 2021-2023</ion-text>
+              <ion-text color="primary" class="card-heading">Executives Committee(2018-2022)</ion-text>
             </div>
           </div>
         </ion-card-header>
