--- a/src/app/leadership/new-executive-committee/new-executive-committee.page.html
+++ b/src/app/leadership/new-executive-committee/new-executive-committee.page.html
@@ -6,7 +6,7 @@
         <ion-card-header>
           <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
             <div fxFlex="97" class="layout-flex-col">
-              <ion-text color="primary" class="card-heading">Executives Committee 2023-2025</ion-text>
+              <ion-text color="primary" class="card-heading">Executives Committee(2023-2025)</ion-text>
             </div>
           </div>
         </ion-card-header>
