--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -71,7 +71,80 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+#Executivecontent {
+  display: none;
+  position: absolute;
+  right: -160px;
+  bottom: 100px; /* Add this line */
+}
 
+#Executivecontent a {
+  float: none; /* Change this line */
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  width: fit-content;
+}
+#Executivecontent{
+    display: none;
+    position: absolute;
+    background-color: #F6A52F;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 100;
+    cursor: pointer;
+}
+#Executive:hover #Executivecontent {
+  display: block;
+}
+#Executive .dropbtn{
+color: black;
+font-size: 14px;
+margin-left: -17px;
+}
+#Executive {
+  color: black;
+  margin-bottom: 0;
+}
+//
+#Advisorycontent {
+  display: none;
+  position: absolute;
+  right: -160px;
+  bottom: 35px; /* Add this line */
+}
+#Advisorycontent{
+  display: none;
+  position: absolute;
+  background-color: #F6A52F;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 100;
+  cursor: pointer;
+}
+#Advisorycontent a {
+  float: none; /* Change this line */
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+#Advisory:hover #Advisorycontent {
+  display: block;
+}
+#Advisory .dropbtn{
+color: black;
+font-size: 14px;
+margin-left: -17px;
+}
+#Advisory {
+  color: black;
+  margin-bottom: 0;
+}
   .ipad-desktop{
     display: inline-block;
   }
