--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -102,11 +102,16 @@
 #Executive .dropbtn{
 color: black;
 font-size: 14px;
-margin-left: -17px;
+margin-left: -16px;
+height: fit-content;
+padding: 0 0 0 16px;
 }
 #Executive {
   color: black;
   margin-bottom: 0;
+}
+#Executive:hover .dropbtn{
+  background-color: #ddd;
 }
 //
 #Advisorycontent {
@@ -139,7 +144,11 @@ margin-left: -17px;
 #Advisory .dropbtn{
 color: black;
 font-size: 14px;
-margin-left: -17px;
+margin-left: -16px;
+padding: 0 0 0 16px ;
+}
+#Advisory:hover .dropbtn{
+  background-color: #ddd;
 }
 #Advisory {
   color: black;
