--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -71,6 +71,7 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+  //new css for dropdown
 #Executivecontent {
   display: none;
   position: absolute;
@@ -154,6 +155,7 @@ padding: 0 0 0 16px ;
   color: black;
   margin-bottom: 0;
 }
+//
   .ipad-desktop{
     display: inline-block;
   }
